# redsp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
source/: redsp.h
source/ddsp/: ddsp_biquad.h
source/filters/: biquad.h  svf.h
source/internal/: poly.h  remath.h  universal.h
test/: biquad_tests.cpp  biquad_tests.h  demotest.cpp  demotest.h  main.cpp  mathtests.cpp  mathtests.h  svf_tests.cpp  svf_tests.h
